Added venv html css and some code exemples for back-end dev also made static possible and moved the templates folder to main

--- a/vlaesyvia/main/templates/main/index.html
+++ b/vlaesyvia/main/templates/main/index.html
@@ -8,20 +8,19 @@
     <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
-
     <header>
         <ul>
             <li>
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
             </li>
             <li>
-                <a href="/">Vlaesyvia</a>
+                <a href="vlaesyvia">Vlaesyvia</a>
             </li>
             <div>
                 <img src="https://picsum.photos/100/100" alt="Logo of the game Vlaesyvia">
             </div>
             <li>
-                <a href="/">Log In</a>
+                <a href="login_signup.html">Log In</a>
             </li>
             <li>
                 <a href="/">Contacts</a>
