--- a/vlaesyvia/static/css/base.css
+++ b/vlaesyvia/static/css/base.css
@@ -23,9 +23,15 @@
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: #FEFCFD;
 }
 
-p{
+:where(a){
+    color: #1E1E1E;
+    text-decoration: none;
+}
+
+:where(p){
     margin: 1rem;
     color: white;
 }
@@ -47,7 +53,7 @@ p{
 
 /* - TITLES - */
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, a {
     font-family: 'Upheaval TT', Impact, monospace;
     letter-spacing: 4%;
 }
@@ -65,7 +71,7 @@ h3 {
     font-size: 2rem;
 }
 
-h4 {
+h4, a {
     font-size: 1.5rem;
 }
 
@@ -73,22 +79,23 @@ h4 {
 
 header {
     background: rgb(115,0,113);
-    background: -moz-linear-gradient(180deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
     background: linear-gradient(180deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#730071",endColorstr="#dc6acf",GradientType=1);
     border-radius: 0 0 0.5rem 0.5rem;
-    outline: 0.3rem solid black;
+    outline: 0.3rem solid #1E1E1E;
     position: sticky;
-    top: -1px;
-    z-index: 3;
+    top: -2px;
+    z-index: 4;
 }
 
 header ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     height: 90px;
+}
+
+header ul li {
+    margin:0 2rem 0 2rem;
 }
 
 header div {
@@ -96,7 +103,7 @@ header div {
     justify-content: center;
     align-items: center;
     position: relative;
-    background-color: black;
+    background-color: #1E1E1E;
     top: 35px;
     width: 125px;
     height: 125px;
@@ -104,7 +111,7 @@ header div {
 }
 
 header img {
-    color: white;
+    color: #FEFCFD;
     text-align: center;
 }
 
@@ -112,11 +119,11 @@ header ul li a {
     font-family: 'Upheaval TT', Impact, monospace;
     font-size: 1.25rem;
     text-decoration: none;
-    color: black;
+    color: #FEFCFD;
 }
 
 header ul li a:hover{
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #FEFCFD;
 }
 
 /* - COMMON - */
@@ -136,6 +143,11 @@ header ul li a:hover{
 
 .flex-between{
     justify-content: space-between;
+    align-items: center;
+}
+
+.flex-evenly{
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -178,41 +190,34 @@ header ul li a:hover{
     color: black;
 }
 
+.bg-white{
+    background-color: #FEFCFD;
+    padding: 0.8rem;
+}
+
 .container-purple{
-    outline: solid 0.3rem black;
+    outline: solid 0.3rem #1E1E1E;
     background: rgb(115,0,113);
-    background: -moz-linear-gradient(155deg, rgba(115,0,113,1) 70%, rgba(171,57,163,1) 91%, rgba(220,106,207,1) 100%);
-    background: -webkit-linear-gradient(155deg, rgba(115,0,113,1) 70%, rgba(171,57,163,1) 91%, rgba(220,106,207,1) 100%);
     background: linear-gradient(155deg, rgba(115,0,113,1) 70%, rgba(171,57,163,1) 91%, rgba(220,106,207,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#730071",endColorstr="#dc6acf",GradientType=1);
     border-radius: 0.3rem;
 }
 
 .container-red-gold{
-    outline: solid 0.3rem black;
+    outline: solid 0.3rem #1E1E1E;
     background: rgb(158,43,37);
-    background: -moz-linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
-    background: -webkit-linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
     background: linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9e2b25",endColorstr="#cba135",GradientType=1);
     border-radius: 0.3rem;
 }
 
 .outline-red-gold{
     background: rgb(158,43,37);
-    background: -moz-linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
-    background: -webkit-linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
     background: linear-gradient(145deg, rgba(158,43,37,1) 82%, rgba(203,161,53,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9e2b25",endColorstr="#cba135",GradientType=1);
     border-radius: 0.3rem;
 }
 
 .outline-purple{
     background: rgb(115,0,113);
-    background: -moz-linear-gradient(200deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    background: -webkit-linear-gradient(200deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
     background: linear-gradient(200deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#730071",endColorstr="#dc6acf",GradientType=1);
     border-radius: 0.3rem;
 }
 
@@ -220,14 +225,12 @@ header ul li a:hover{
 
 footer {
     background: rgb(115,0,113);
-    background: -moz-linear-gradient(0deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    background: -webkit-linear-gradient(0deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
     background: linear-gradient(0deg, rgba(115,0,113,1) 0%, rgba(220,106,207,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#730071",endColorstr="#dc6acf",GradientType=1);
     border-radius: 0.5rem 0.5rem 0 0;
-    outline: 0.3rem solid black;
-    color: white;
-    margin-top: 0.5rem;
+    outline: 0.3rem solid #1E1E1E;
+    color: #FEFCFD;
+    position: relative;
+    z-index: 3;
 }
 
 footer > img {
