--- a/vlaesyvia/static/css/index.css
+++ b/vlaesyvia/static/css/index.css
@@ -4,7 +4,7 @@
 }
 
 .character-container > p {
-    color: black;
+    color: #1E1E1E;
 }
 
 .character-container img {
@@ -14,10 +14,8 @@
     cursor: pointer;
 }
 
-.bg-white{
-    background-color: white;
+p.bg-white {
     margin: 0 0.6rem 0.6rem 0.6rem;
-    padding: 0.8rem;
     border-radius: 0 0 0.2rem 0.2rem;
 }
 
@@ -84,16 +82,10 @@ h3.bg-white  {
     top: 50%;
     left: 3rem;
     transform: translateY(-50%);
-    font: 400 0.85rem helvetica,sans-serif;
-    color: white;
+    color: #FEFCFD;
     text-shadow: 0 3px 8px rgba(0,0,0,0.5);
     opacity: 0;
     padding: 0 0.5rem 0 0.5rem;
-}
-
-.content .title {
-    font-family: 'arial-black';
-    text-transform: uppercase;
 }
 
 .content .description {
@@ -105,8 +97,8 @@ h3.bg-white  {
 .content button {
     width: fit-content;
     background-color: rgba(0,0,0,0.1);
-    color: white;
-    border: 2px solid white;
+    color: #FEFCFD;
+    border: 2px solid #FEFCFD;
     border-radius: 0.25rem;
     padding: 0.75rem;
     cursor: pointer;
